--- a/templates/index.eco.html
+++ b/templates/index.eco.html
@@ -19,7 +19,7 @@
     <h1>Hello Heroku</h1>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://js.pusher.com/2.1/pusher.min.js"></script>
     <script src="/static/js/app.js"></script>
 </body>
 </html>
